fix: change the muted text color to a slightly darker one due to contrast error on wave accessibility tool. Related to #31

--- a/src/styles/imports/variables.css
+++ b/src/styles/imports/variables.css
@@ -3,7 +3,7 @@
   --background-color: #f5f5f5;
   --surface-color: #ffffff;
   --text-color: #222;
-  --muted-text-color: #777;
+  --muted-text-color: #555;
   --border-color: #ddd;
 
   --info-color: #0d3e80;
